# selective-web-scraper

./: .gitignore  README.md  jest.config.js  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
.old/chrome_extension_0.1.0/: manifest.json
.old/chrome_extension_0.2.0/: manifest.json  service-worker.js
.old/chrome_extension_0.2.0/content_scripts/: submit_text.js
chrome_extension/: manifest.json  package.json
chrome_extension/scripts/: content.js
chrome_extension1.0/: manifest.json  package-lock.json
chrome_extension1.1/: manifest.json  package.json  service-worker.js
chrome_extension1.1/content_scripts/: submit_text.js
chrome_extension1.1/popup/: popup.html
chrome_extension_0.1.0/: package.json
chrome_extension_0.1.0/popup/html/: index.html
chrome_extension_0.1.0/scripts/: content.js  submit-text.js
chrome_extension_0.2.0/: package-lock.json  package.json
chrome_extension_0.2.0/content_scripts/: content.js  get_window_dimensions.js
chrome_extension_0.2.0/popup/: popup.html
chrome_extension_0.3.0/: .eslintrc.cjs  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.common.js
python-api/: package-lock.json  pyproject.toml
python-api/python_api/adapters/: repositories.py
python-api/python_api/api/: models.py  wsgi.py
python-api/python_api/app/: services.py
python-api/python_api/domain/: models.py
scripts/: submit-text.js
src/content-scripts/: SubmitText.ts
src/tools/: Constraints.ts  Errors.ts  Types.ts
tests/: resources.md
tests/unit/: logWarnings.ts
(+63 files in other folders)
