[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["jpatryk13 <jesionka.patryk13@gmail.com>"]
readme = "README.md"
packages = [{include = "python_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
pydantic = "^1.10.8"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
